# asyncio-mayhem-mandrill

./: pyproject.toml
part-0/: mayhem_1.py
part-2/: mayhem_1.py  mayhem_aside_1.py
part-3/: mayhem_1.py
part-4/: mayhem_1.py
part-5/: mayhem.py  test_mayhem.py
part-6/: mayhem_1.py
