[tool.poetry]
name = "asyncio-mayhem-mandrill"
version = "0.1.0"
description = ""
authors = ["Шарафиев Ришат <rishatsharafiev@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.1"
pytest-asyncio = "^0.14.0"
pytest-mock = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
